--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "myConnection": "Data Source=.;Initial Catalog=Project;Integrated Security=True",
+    "default": "Data Source=.;Initial Catalog=Project;Integrated Security=True"
+  }
 }
