--- a/Dal_Repository/Dal_Repository.csproj
+++ b/Dal_Repository/Dal_Repository.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="6.0.0" />
     <PackageReference Include="microsoft.entityframeworkcore" Version="6.0.0" />
     <PackageReference Include="microsoft.entityframeworkcore.sqlserver" Version="6.0.0" />
     <PackageReference Include="microsoft.entityframeworkcore.tools" Version="6.0.0">
