--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "myConnection": "Data Source=.;Initial Catalog=Project;Integrated Security=True",
-    "default": "Data Source=.;Initial Catalog=Project;Integrated Security=True"
+    "myConnection": "Server=DESKTOP-SI8MC0H;Database=LearningPlatform;Trusted_Connection=True;",
+    "default": "Server=DESKTOP-SI8MC0H;Database=LearningPlatform;Trusted_Connection=True;"
   }
 }
